RESOLVED FIXED123263
Web Inspector: Inspector doesn't show webkitTransitionEnd events in the timeline
https://bugs.webkit.org/show_bug.cgi?id=123263
Summary Web Inspector: Inspector doesn't show webkitTransitionEnd events in the timeline
Antoine Quint
Reported 2013-10-24 03:27:58 PDT
Attachments
Test case (551 bytes, text/html)
2013-10-24 03:27 PDT, Antoine Quint
no flags
Patch (5.70 KB, patch)
2013-10-24 03:36 PDT, Antoine Quint
no flags
Patch (5.71 KB, patch)
2013-10-24 06:29 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2013-10-24 03:29:37 PDT
See the attached test case with the timeline open, you'll notice no webkitTransitionEnd event is logged even though the event is indeed dispatched. This regressed when we added support for the unprefixed "transitionend" event in http://trac.webkit.org/changeset/139762.
Antoine Quint
Comment 2 2013-10-24 03:36:54 PDT
EFL EWS Bot
Comment 3 2013-10-24 04:44:25 PDT
EFL EWS Bot
Comment 4 2013-10-24 06:05:13 PDT
Antoine Quint
Comment 5 2013-10-24 06:29:15 PDT
WebKit Commit Bot
Comment 6 2013-10-24 12:09:07 PDT
Comment on attachment 215060 [details] Patch Clearing flags on attachment: 215060 Committed r157942: <http://trac.webkit.org/changeset/157942>
WebKit Commit Bot
Comment 7 2013-10-24 12:09:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.